--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build && next export && next-sitemap --config sitemap.config.js",
     "start": "next start",
     "lint": "next lint"
   },
@@ -28,6 +28,7 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.6.0",
+    "next-sitemap": "^4.0.7",
     "nextra": "^2.3.0",
     "nextra-theme-docs": "^2.3.0",
     "postcss": "^8.4.21",
